--- a/index.html
+++ b/index.html
@@ -62,6 +62,49 @@
     
             </section>
         </div>
+        <!------------------------- explore section  -------------------------->
+        <section class="explore">
+            <div class="container">
+                <div class="explore-features">
+                    <div class="explore-info">
+                        <div class="explore-detail">
+                            <h1 class="explore-title">Features you will <br> love & enjoy</h1>
+                            <p class="explore-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        </div>
+                        <div class="explore-cards">
+                            <div class="card">
+                                <div class="cardpadding">
+                                    <h2 class="card-title">Dexktop & Mobile Version</h2>
+                                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="cardpadding">
+                                    <h2 class="card-title">Drag & Drop Builder</h2>
+                                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="cardpadding">
+                                    <h2 class="card-title">Awesome Modern Design</h2>
+                                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="cardpadding">
+                                    <h2 class="card-title">Super Easy to Edit</h2>
+                                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="explore-image">
+                        <img src="./images/architect.png" alt="">
+                        <button class="sec-btn"><span id="year">10+Year</span> <br><span id="ex">Experience</span> </button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
