sponsor and fact section added and styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>architect</title>
     <!--%%%%%%%%%%%%%%%%%%%%%%%% stylesheet %%%%%%%%%%%%%%%%%%%% -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -105,7 +105,67 @@
                 </div>
             </div>
         </section>
+        <!----------------------------- fact section  --------------------------->
+        <section class="facts">
+            <div class="container">
+                <div class="fact">
+                    <div class="fact-info">
+                        <h1 class="fact-title">Some Facts</h1>
+                        <p class="fact-p">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                    </div>
+                    <div class="fact-logos">
+                        <div class="logos">
+                            <div class="logo">
+                                <img src="./images/icons/customers.png" alt="">
+                                <h3 class="logo-title">590</h3>
+                                <p class="logo-p">Clients Worked</p>
+                            </div>
+                        </div>
+                        <div class="logos">
+                            <div class="logo">
+                                <img src="./images/icons/email.png" alt="">
+                                <h3 class="logo-title">75158</h3>
+                                <p class="logo-p">Email Send</p>
+                            </div>
+                        </div>
+                        <div class="logos">
+                            <div class="logo">
+                                <img src="./images/icons/projects.png" alt="">
+                                <h3 class="logo-title">2077</h3>
+                                <p class="logo-p">Projects</p>
+                            </div>
+                        </div>
+                        <div class="logos">
+                            <div class="logo">
+                                <img src="./images/icons/ribon.png" alt="">
+                                <h3 class="logo-title">64</h3>
+                                <p class="logo-p">Award Winning</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </section>
+
+        <!-------------------------- sponsors section  --------------------------->
+        <section class="sponsor">
+            <div class="container">
+                <div class="sponsors">
+                    <div class="sponsor-info">
+                        <h2 class="sponsor-title">Our Sponspors</h2>
+                        <p class="sponsor-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                    </div>
+                    <div class="sponsor-image">
+                        <img src="./images/sponsors/amazon.png" alt="">
+                        <img src="./images/sponsors/figma.png" alt="">
+                        <img src="./images/sponsors/google.png" alt="">
+                        <img src="./images/sponsors/spotify.png" alt="">
+                        <img src="./images/sponsors/telerama.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!---------------------------- footer section ----------------------------->
